--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,18 +33,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageButton
-            android:contentDescription="@string/next_button"
+        <Button
+
             android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow_left" />
-        <ImageButton
-            android:contentDescription="@string/previous_button"
+            android:drawableEnd="@drawable/arrow_left"
+            android:text="@string/previous_button"
+            android:drawablePadding="4dp" />
+        <Button
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow_right" />
+            android:drawableEnd="@drawable/arrow_right"
+            android:drawablePadding="4dp"
+            android:text="@string/next_button" />
 
     </LinearLayout>
 </LinearLayout>
